--- a/app/src/main/res/layout/calculator_constraint.xml
+++ b/app/src/main/res/layout/calculator_constraint.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/background_art"
+        tools:ignore="MissingConstraints" />
+
+
     <EditText
         android:id="@+id/key_enter"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         android:layout_margin="24dp"
         android:gravity="end"
         android:textSize="40sp"
@@ -20,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/key_1"
-        android:layout_margin="4dp"
+        android:layout_margin="3dp"
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintTop_toBottomOf="@id/key_enter"
         app:layout_constraintStart_toStartOf="@id/key_enter"
@@ -31,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/key_2"
-        android:layout_margin="4dp"
+        android:layout_margin="3dp"
         app:layout_constraintTop_toBottomOf="@id/key_enter"
         app:layout_constraintStart_toEndOf="@id/key_1"
         app:layout_constraintEnd_toStartOf="@id/key_3"/>
@@ -41,7 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/key_3"
-        android:layout_margin="4dp"
+        android:layout_margin="3dp"
         app:layout_constraintTop_toBottomOf="@id/key_enter"
         app:layout_constraintStart_toEndOf="@id/key_2"
         app:layout_constraintEnd_toStartOf="@id/key_plus"/>
@@ -123,7 +132,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/key_plus"
-        android:layout_margin="4dp"
+        android:layout_margin="3dp"
         app:layout_constraintTop_toBottomOf="@id/key_enter"
         app:layout_constraintStart_toEndOf="@id/key_3"
         app:layout_constraintEnd_toEndOf="@id/key_enter"/>
