--- a/app/src/main/res/layout/calculator_constraint.xml
+++ b/app/src/main/res/layout/calculator_constraint.xml
@@ -14,13 +14,13 @@
 
 
     <TextView
-        android:id="@+id/key_enter"
+        android:id="@+id/result"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="24dp"
         android:gravity="end"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-        android:textSize="40sp"
+        android:textSize="72sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -33,8 +33,8 @@
         android:text="@string/key_1"
         app:layout_constraintEnd_toStartOf="@id/key_2"
         app:layout_constraintHorizontal_chainStyle="spread"
-        app:layout_constraintStart_toStartOf="@id/key_enter"
-        app:layout_constraintTop_toBottomOf="@id/key_enter" />
+        app:layout_constraintStart_toStartOf="@id/result"
+        app:layout_constraintTop_toBottomOf="@id/result" />
 
     <Button
         android:id="@+id/key_2"
@@ -44,7 +44,7 @@
         android:text="@string/key_2"
         app:layout_constraintEnd_toStartOf="@id/key_3"
         app:layout_constraintStart_toEndOf="@id/key_1"
-        app:layout_constraintTop_toBottomOf="@id/key_enter" />
+        app:layout_constraintTop_toBottomOf="@id/result" />
 
     <Button
         android:id="@+id/key_3"
@@ -54,7 +54,7 @@
         android:text="@string/key_3"
         app:layout_constraintEnd_toStartOf="@id/key_plus"
         app:layout_constraintStart_toEndOf="@id/key_2"
-        app:layout_constraintTop_toBottomOf="@id/key_enter" />
+        app:layout_constraintTop_toBottomOf="@id/result" />
 
     <Button
         android:id="@+id/key_4"
@@ -134,9 +134,9 @@
         android:layout_height="wrap_content"
         android:layout_margin="3dp"
         android:text="@string/key_plus"
-        app:layout_constraintEnd_toEndOf="@id/key_enter"
+        app:layout_constraintEnd_toEndOf="@id/result"
         app:layout_constraintStart_toEndOf="@id/key_3"
-        app:layout_constraintTop_toBottomOf="@id/key_enter" />
+        app:layout_constraintTop_toBottomOf="@id/result" />
 
     <Button
         android:id="@+id/key_minus"
